siduxcc (0.11.3) UNRELEASED; urgency=low

  [ Stefan Lippers-Hollmann ]
  * NOT RELEASED YET

  [ Fabian Wuertz ]
  * cmake 1/?: new folder created
  * camke 2/?: folder moved
  * cmake 3/?: folder moved
  * cmake 4/?: make files removed
  * cmake 5/?: cmake files added
  * cmake 6/?: translation updated

 -- Fabian Wuertz <xadras@sidux.com>  Sat, 12 Jul 2008 18:34:22 +0200

siduxcc (0.11.2) unstable; urgency=low

  * cli: hostname problem fixed
  * cli: hostname function updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 04 Jul 2008 21:34:51 +0200

siduxcc (0.11.1) unstable; urgency=low

  [ Fabian Wuertz ]
  * sidux-hermes-kde4 added
  * cli: addSources function updated
  * siduxcc_hermes to hermes_kde3 moved
  * hermes-kde4 to hermes_kde4 moved
  * hermes_gkt2 folder added
  * disconnected icon to icon folder moved
  * manpage added, not included in the debian yet 
  * another brick in the wall 
  * subdirs-file updated
  * debian/siduxcc.manpages added
  * kde->kde3

  [ Stefan Lippers-Hollmann ]
  * cupsys --> cups.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 25 Jun 2008 16:22:56 +0200

siduxcc (0.10.12) unstable; urgency=low

  * hermes-kde: exec problems solved

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 22 Jun 2008 02:48:27 +0200

siduxcc (0.10.11) unstable; urgency=low

  * kde: network: card -> i18n
  * gtk: desktop: (GTK) added
  * cli: fDone added
  * gtk: typo

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 20 Jun 2008 18:05:26 +0200

siduxcc (0.10.10) unstable; urgency=low

  * cli: typos

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 09 Jun 2008 13:13:07 +0200

siduxcc (0.10.9) unstable; urgency=low

  [ Fabian Wuertz ]
  * gtk2: about dialog improved

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.8.0, no changes necessary.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 08 Jun 2008 19:22:55 +0200

siduxcc (0.10.8) unstable; urgency=low

  * sidux-hermes-gtk2.desktop added
  * gcc-4.3 problems solved
  * some compile warnings solved