@@ -10,8 +10,9 @@ siduxcc (0.11.3) UNRELEASED; urgency=low
   * cmake 4/?: make files removed
   * cmake 5/?: cmake files added
   * cmake 6/?: translation updated
+  * cmake 7/?: cmake files added
 
- -- Fabian Wuertz <xadras@sidux.com>  Sat, 12 Jul 2008 18:34:22 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Sat, 12 Jul 2008 18:38:48 +0200
 
 siduxcc (0.11.2) unstable; urgency=low
 
